--- a/price.html
+++ b/price.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pricing Page</title>
     <link rel="stylesheet" href="price.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
     <header>
@@ -20,58 +21,62 @@
     <main>
         <section class="pricing-section">
             <h1>Pricing Plans</h1>
+            <div class="controls-container">
+                <div class="toggle-container">
+                    <label for="toggle">Monthly</label>
+                    <input type="checkbox" id="toggle">
+                    <span class="toggle-slider"></span>
+                    <label>Yearly <span class="discount">Save 20%</span></label>
+                </div>
+                <div class="currency-container">
+                    <label for="currency">Currency:</label>
+                    <select id="currency">
+                        <option value="USD">$ USD</option>
+                        <option value="EUR">€ EUR</option>
+                        <option value="GBP">£ GBP</option>
+                    </select>
+                </div>
+                <div class="unit-container">
+                    <label for="unit">Unit:</label>
+                    <select id="unit">
+                        <option value="GB">GB</option>
+                        <option value="TB">TB</option>
+                        <option value="MB">MB</option>
+                    </select>
+                </div>
+            </div>
             <div class="pricing-container">
-                <div class="pricing-card">
+                <div class="pricing-card" data-plan="basic">
                     <h2>Basic</h2>
-                    <p>$9.99/month</p>
+                    <p class="price" data-base-price="9.99">USD 9.99<span>/month</span></p>
                     <ul>
                         <li>1 User</li>
-                        <li>10GB Storage</li>
+                        <li><span class="storage">10</span>GB Storage</li>
                         <li>Basic Support</li>
                     </ul>
-                    <button class="btn">Sign Up</button>
+                    <button class="btn">Sign Up <i class="fas fa-arrow-right"></i></button>
                 </div>
-                <div class="pricing-card">
+                <div class="pricing-card popular" data-plan="premium">
                     <h2>Premium</h2>
-                    <p>$19.99/month</p>
+                    <span class="popular-badge">Most Popular</span>
+                    <p class="price" data-base-price="19.99">USD 19.99<span>/month</span></p>
                     <ul>
                         <li>5 Users</li>
-                        <li>50GB Storage</li>
+                        <li><span class="storage">50</span>GB Storage</li>
                         <li>Premium Support</li>
                     </ul>
-                    <button class="btn">Sign Up</button>
+                    <button class="btn">Sign Up <i class="fas fa-arrow-right"></i></button>
                 </div>
-                <div class="pricing-card">
+                <div class="pricing-card" data-plan="enterprise">
                     <h2>Enterprise</h2>
-                    <p>$49.99/month</p>
+                    <p class="price" data-base-price="49.99">USD 49.99<span>/month</span></p>
                     <ul>
                         <li>10 Users</li>
-                        <li>100GB Storage</li>
+                        <li><span class="storage">100</span>GB Storage</li>
                         <li>Enterprise Support</li>
                     </ul>
-                    <button class="btn">Sign Up</button>
+                    <button class="btn">Sign Up <i class="fas fa-arrow-right"></i></button>
                 </div>
-            </div>
-            <div class="toggle-container">
-                <label for="toggle">Monthly/Yearly</label>
-                <input type="checkbox" id="toggle">
-                <div class="toggle-slider"></div>
-            </div>
-            <div class="currency-container">
-                <label for="currency">Currency:</label>
-                <select id="currency">
-                    <option value="USD">$ USD</option>
-                    <option value="EUR">€ EUR</option>
-                    <option value="GBP">£ GBP</option>
-                </select>
-            </div>
-            <div class="unit-container">
-                <label for="unit">Unit:</label>
-                <select id="unit">
-                    <option value="GB">GB</option>
-                    <option value="TB">TB</option>
-                    <option value="MB">MB</option>
-                </select>
             </div>
         </section>
     </main>
